--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -374,7 +374,7 @@
                         <li>
                             <a href="@Url.Action("Index", "Home")">
                                 <i class="sidebar-icon fa fa-history" aria-hidden="true"></i>
-                                <span class="link-text"">Transaction History</span>
+                                <span class="link-text">Transactions History</span>
                             </a>
                         </li>
                     </ul>
