--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -5,25 +5,21 @@
 
 </style>
 <div class="page">
-    <div class="page-header">
-        <div class="page-title">
-            <h2>Clients</h2>
-            <p>Manage and review all clients</p>
-        </div>
-        <div class="page-actions">
-            <a asp-controller="Clients" asp-action="RegisterClient" class="add-button"
-                style="text-decoration: none; color: white;">
-                <i class="fas fa-plus"></i> Register Client
-            </a>
-        </div>
-    </div>
     <div class="page-body">
         <div class="body-content">
             <div class="content-header">
-                <h3>Client List</h3>
-                <div class="global-search">
-                    <input type="text" id="globalSearch" placeholder="Global search..." />
-                    <button class="add-btn search-btn"><i class="fas fa-search"></i> Search</button>
+                <h2 class="content-title">Clients</h2>
+                <div class="page-options">
+                    <div class="page-action-buttons">
+                        <a asp-controller="Clients" asp-action="RegisterClient" class="add-button"
+                            style="text-decoration: none; color: white; width: 100%;">
+                            <i class="fas fa-plus"></i> Add New Client
+                        </a>
+                    </div>
+                    <div class="global-search">
+                        <input type="text" id="globalSearch" placeholder="Global search..." />
+                        <button class="add-btn search-btn"><i class="fas fa-search"></i> Search</button>
+                    </div>
                 </div>
             </div>
             <table class="data-table">
